# **********************************************************
#      2024 : Arthur JEULIN
#      Copyright (c) 
#      Created by Arthur JEULIN on 01/30/2024.
# **********************************************************

cmake_minimum_required(VERSION 3.27.5)

enable_testing()
# add_subdirectory(dev)
# add_subdirectory(units)


